versioned_docs/version-6.0/enterprise/adc/listeners/rules/error_rules.md
---
sidebar_position: 1
title: "Error Rules | Haltdos Docs"
description: "Replaces raw backend application drop codes with corporate custom notification pages at the load balancer layer."
---

# Error Rules
Error Rule & Settings

---

Error Rules is a feature of Haltdos SLB that allows application owners to show custom pages without revealing internal exceptions generated by the application upon failure. The custom pages can be created for specific HTTP error codes respectively and thus be used with the error rules.

![errorrules](/img/adc/v6/docs/errorrules.png)

### How to Use:

1. Go to Stack > [**SLB**](/enterprise/adc) > [**Listeners**](../listeners.md) > Rules.

2. Select the Error rule.

3. Click **Add Rule** button.

4. Configure your settings. 

5. Click Save Changes

| SETTINGS            | ACCEPTED VALUE | DEFAULT              |
|---------------------|----------------|----------------------|
| Rule Name           | String         | Blank                |
| Rule Message        | String         | Blank                |
| Rule Enabled        | Boolean        | False                |
| Rule Priority       | Integer        | 0                    |
| HTTP Response Codes | Drop-down      | Blank                |
| Rule Action         | Drop-down      | Send Custom Response |
| Custom Error Page   | File upload    | None                 |

#### Description:

#### Rule Name

User can mention the rule name. This will help the user to identify the rule and its usage.

#### Rule Message

User can enter a rule message to add a description on the rule name.

#### Rule Enabled

Users can enable or disable the rule.

#### Rule Priority

User can define the rule's priority among various other custom error rules.

#### HTTP Response Codes

User can mention the HTTP response code based on the custom error rule name.

#### Rule Action

Specifies the action to be executed when this is gets triggered

#### Custom Error Page

User can add custom error page that will be visible to end-users.