versioned_docs/version-8.0/enterprise/adc/listeners/rules/error_rules.md
---
sidebar_position: 1
---

# Error Rules

---

Error Rules is a feature of Haltdos SLB that allows application owners to show custom pages without revealing internal exceptions generated by the application upon failure. The custom pages can be created for specific HTTP error codes respectively and thus be used with the error rules.

![errorrules](/img/adc/v8/docs/error_rule.png)

### How to Use:
1. Go to **Stack** > [**SLB**](/enterprise/adc) > [**Listeners**](../listeners.md) > **Rules**.
2. Select the **Error rules**.
3. Click **Add Rule** button.
4. Configure your settings. 
5. Click **Save Changes**

**Configure the following parameters to set up the desired settings:**

### Description

##### **Rule Name**

User can mention the rule name. This will help the user to identify the rule and its usage.

    Accepted values: String

    Default: Blank 

##### **Rule Message**

User can enter a rule message to add a description on the rule name.

    Accepted values: String

    Default: Blank 

##### **Rule Enabled**

Users can enable or disable the rule.

    Accepted values: Enabled / Disabled

    Default: Enabled 

##### **Rule Priority**

User can define the rule's priority among various other custom error rules.

    Accepted values: Integer

    Default: 0 

##### **HTTP Response Codes**

User can mention the HTTP response code based on the custom error rule name.

    Accepted values: 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 428, 429, 431, 440, 444, 449, 450, 451, 495, 496, 497, 498, 499, 500, 501, 502, 503, 504, 505, 506, 507, 508, 509, 510, 511, 520, 521, 522, 523, 524, 525, 526, 527, 530

    Default: NONE  

##### **Rule Action**

Specifies the action to be executed when this is gets triggered

    Accepted values: NO ACTION / SEND CUSTOM RESPONSE

    Default: NO ACTION 

##### **Custom Error Page**

User can add custom error page that will be visible to end-users.

    Accepted values: Custom Error Page

    Default: Blank


#### Add Condition
The user can specify some request/response-based conditions which can be used as mandatory conditions to be fulfilled to apply the rule.

To configure the parameter of the conditions please refer to the following link: [**Conditions**](/v8/enterprise/adc/listeners/rules/conditions)